--- a/gencfg-asm/Cargo.toml
+++ b/gencfg-asm/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2018"
 [dependencies]
 num_enum = "0.5.1"
 hex = "0.4.2"
+pest = "2.1"
+pest_derive = "2.1"
 
 [dev-dependencies]
 assert_matches = "1.5.0"
