--- a/gencfg-analyze/Cargo.toml
+++ b/gencfg-analyze/Cargo.toml
@@ -1,27 +1,17 @@
 [package]
-name = "gencfg-asm"
+name = "gencfg-analyze"
 version = "0.1.0"
 authors = ["Sam Wilson <sam.wilson@mesh.xyz>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
 cli = ["structopt", "gencfg-cli"]
 
 [dependencies]
-num_enum = "0.5.1"
-hex = "0.4.2"
-pest = "2.1"
-pest_derive = "2.1"
-sha3 = "0.9.1"
+gencfg-asm = { path = "../gencfg-asm" }
 structopt = { optional = true, version = "0.3.21" }
 gencfg-cli = { optional = true, path = "../gencfg-cli" }
 
-[dev-dependencies]
-assert_matches = "1.5.0"
-hex-literal = "0.3.1"
-
 [[bin]]
-name = "ease"
+name = "disease"
 required-features = ["cli"]
