--- a/etk-asm/Cargo.toml
+++ b/etk-asm/Cargo.toml
@@ -2,6 +2,7 @@
 name = "etk-asm"
 version = "0.1.0"
 authors = ["Sam Wilson <sam.wilson@mesh.xyz>", "lightclient <lightclient@protonmail.com>"]
+license = "MIT OR Apache-2.0"
 edition = "2018"
 
 [features]
