--- a/etk-asm/Cargo.toml
+++ b/etk-asm/Cargo.toml
@@ -19,6 +19,7 @@ etk-cli = { optional = true, path = "../etk-cli" }
 
 [dev-dependencies]
 assert_matches = "1.5.0"
+tempfile = "3"
 hex-literal = "0.3.1"
 
 [[bin]]
