--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -30,6 +30,11 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
+          args: --all --all-features
+      - uses: peaceiris/actions-mdbook@v1
+        with:
+          mdbook-version: '0.4.7'
+      - run: mdbook test doc -L ./target/debug/deps
 
   fmt:
     name: Rustfmt
@@ -50,14 +55,3 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           args: --all-features
-
-  doc:
-    name: mdBook Setup
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      - uses: peaceiris/actions-mdbook@v1
-        with:
-          mdbook-version: '0.4.7'
-      - run: mdbook test doc
