--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -15,10 +15,10 @@ jobs:
         with:
           mdbook-version: '0.4.7'
 
-      - run: mdbook build
+      - run: mdbook build doc
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./book/master
+          publish_dir: ./doc/book
