--- a/etk-cli/Cargo.toml
+++ b/etk-cli/Cargo.toml
@@ -4,6 +4,12 @@ version = "0.1.0"
 authors = ["Sam Wilson <sam.wilson@mesh.xyz>", "lightclient <lightclient@protonmail.com>"]
 license = "MIT OR Apache-2.0"
 edition = "2018"
+description = "Ethereum Toolkit command-line utilities"
+homepage = "https://quilt.github.io/etk"
+repository = "https://github.com/quilt/etk"
+readme = "README.md"
+keywords = ["etk", "ethereum", "cli"]
+categories = ["cryptography::cryptocurrencies", "command-line-utilities", "development-tools", "command-line-interface"]
 
 [dependencies]
 hex = "0.4.2"
