--- a/etk-asm/Cargo.toml
+++ b/etk-asm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "etk-asm"
-version = "0.1.0"
+version = "0.2.0-dev"
 authors = ["Sam Wilson <sam.wilson@mesh.xyz>", "lightclient <lightclient@protonmail.com>"]
 license = "MIT OR Apache-2.0"
 edition = "2018"
@@ -16,17 +16,17 @@ cli = ["structopt", "etk-cli"]
 backtraces = [ "snafu/backtraces" ]
 
 [dependencies]
-hex = "0.4.2"
-pest = "2.1"
+hex = "0.4.3"
+pest = "2.1.3"
 pest_derive = "2.1"
 sha3 = "0.9.1"
 structopt = { optional = true, version = "0.3.21" }
-etk-cli = { optional = true, path = "../etk-cli", version = "0.1.0" }
+etk-cli = { optional = true, path = "../etk-cli", version = "0.2.0-dev" }
 snafu = { version = "0.6.10", default-features = false, features = [ "std" ] }
 
 [dev-dependencies]
 assert_matches = "1.5.0"
-tempfile = "3"
+tempfile = "3.2.0"
 hex-literal = "0.3.1"
 
 [[bin]]
