--- a/etk-analyze/Cargo.toml
+++ b/etk-analyze/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "etk-analyze"
-version = "0.1.0"
+version = "0.2.0-dev"
 authors = ["Sam Wilson <sam.wilson@mesh.xyz>", "lightclient <lightclient@protonmail.com>"]
 license = "MIT OR Apache-2.0"
 edition = "2018"
@@ -15,10 +15,10 @@ categories = ["cryptography::cryptocurrencies", "command-line-utilities", "devel
 cli = ["structopt", "etk-cli"]
 
 [dependencies]
-hex = "0.4.2"
-etk-asm = { path = "../etk-asm", version = "0.1.0" }
+hex = "0.4.3"
+etk-asm = { path = "../etk-asm", version = "0.2.0-dev" }
 structopt = { optional = true, version = "0.3.21" }
-etk-cli = { optional = true, path = "../etk-cli", version = "0.1.0" }
+etk-cli = { optional = true, path = "../etk-cli", version = "0.2.0-dev" }
 
 [[bin]]
 name = "disease"
