ethereum toolkit => evm toolkit and add syntax highlighting info to book

--- a/etk-cli/Cargo.toml
+++ b/etk-cli/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.0-dev"
 authors = ["Sam Wilson <sam.wilson@mesh.xyz>", "lightclient <lightclient@protonmail.com>"]
 license = "MIT OR Apache-2.0"
 edition = "2018"
-description = "Ethereum Toolkit command-line utilities"
+description = "EVM Toolkit command-line utilities"
 homepage = "https://quilt.github.io/etk"
 repository = "https://github.com/quilt/etk"
 readme = "README.md"
