--- a/doc/book.toml
+++ b/doc/book.toml
@@ -3,7 +3,7 @@ authors = ["Sam Wilson"]
 language = "en"
 multilingual = false
 src = "src"
-title = "Ethereum Toolkit (ETK)"
+title = "EVM Toolkit (ETK)"
 
 [output.html]
 git-repository-url = "https://github.com/quilt/etk"
