--- a/etk-analyze/Cargo.toml
+++ b/etk-analyze/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.0-dev"
 authors = ["Sam Wilson <sam.wilson@mesh.xyz>", "lightclient <lightclient@protonmail.com>"]
 license = "MIT OR Apache-2.0"
 edition = "2018"
-description = "Ethereum Toolkit analysis tools"
+description = "EVM Toolkit analysis tools"
 homepage = "https://quilt.github.io/etk"
 repository = "https://github.com/quilt/etk"
 readme = "README.md"
