--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -54,4 +54,4 @@ jobs:
       - uses: actions-rs/clippy-check@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          args: --all-features
+          args: --all-features -- --deny warnings
