--- a/etk-analyze/Cargo.toml
+++ b/etk-analyze/Cargo.toml
@@ -12,7 +12,7 @@ keywords = ["etk", "ethereum", "disassembler"]
 categories = ["cryptography::cryptocurrencies", "command-line-utilities", "development-tools"]
 
 [features]
-cli = ["structopt", "etk-cli", "cfg"]
+cli = ["structopt", "etk-cli", "cfg", "snafu"]
 cfg = ["z3", "petgraph"]
 
 [dependencies]
@@ -21,6 +21,7 @@ etk-asm = { path = "../etk-asm", version = "0.2.0-dev" }
 structopt = { optional = true, version = "0.3.21" }
 etk-cli = { optional = true, path = "../etk-cli", version = "0.2.0-dev" }
 z3 = { optional = true, version = "0.10.0" }
+snafu = { optional = true, version = "0.6.10" }
 
 [dependencies.petgraph]
 optional = true
