--- a/etk-asm/Cargo.toml
+++ b/etk-asm/Cargo.toml
@@ -16,12 +16,13 @@ cli = ["structopt", "etk-cli"]
 backtraces = [ "snafu/backtraces" ]
 
 [dependencies]
+etk-cli = { optional = true, path = "../etk-cli", version = "0.2.0-dev" }
 hex = "0.4.3"
+num-bigint = "0.4"
 pest = "2.1.3"
 pest_derive = "2.1"
 sha3 = "0.9.1"
 structopt = { optional = true, version = "0.3.21" }
-etk-cli = { optional = true, path = "../etk-cli", version = "0.2.0-dev" }
 snafu = { version = "0.6.10", default-features = false, features = [ "std" ] }
 
 [dev-dependencies]
