--- a/etk-asm/Cargo.toml
+++ b/etk-asm/Cargo.toml
@@ -21,6 +21,7 @@ hex = "0.4.3"
 num-bigint = "0.4"
 pest = "2.1.3"
 pest_derive = "2.1"
+rand = "0.8.4"
 sha3 = "0.9.1"
 structopt = { optional = true, version = "0.3.21" }
 snafu = { version = "0.6.10", default-features = false, features = [ "std" ] }
