--- a/etk-types/Cargo.toml
+++ b/etk-types/Cargo.toml
@@ -11,8 +11,17 @@ readme = "README.md"
 keywords = ["etk", "ethereum"]
 categories = ["cryptography::cryptocurrencies"]
 
+[features]
+benches-comparison = ["primitive-types"]
+
 [dependencies]
 num-traits = { version = "0.2.14", default-features = false }
+primitive-types = { optional = true, version = "0.10.1" }
 
 [dev-dependencies]
 static_assertions = "1.1.0"
+criterion = { version = "0.3.5", features = ["html_reports"] }
+
+[[bench]]
+name = "u256"
+harness = false
