--- a/etk-4byte/Cargo.toml
+++ b/etk-4byte/Cargo.toml
@@ -13,19 +13,20 @@ categories = ["cryptography::cryptocurrencies", "development-tools"]
 
 
 [features]
-generate = ["reqwest", "tokio", "serde", "phf_codegen"]
+generate = ["reqwest", "tokio"]
 
 [dependencies]
 reqwest = { version = "0.11.10", optional = true, features = [ "json" ]}
 tokio = { version = "1.18.1", optional = true, features = [ "macros", "sync" ] }
-serde = { version = "1.0", optional = true, features = [ "derive" ] }
-phf_codegen = { version = "0.10.0", optional = true }
-phf = "0.10.1"
+serde = { version = "1.0", features = [ "derive" ] }
+lazy_static = "1.4.0"
+brotli = "3.3.4"
+bincode = "1.3.3"
 
 [[bin]]
 name = "etk-4byte-generate"
 required-features = [ "generate" ]
 
 [[bin]]
-name = "etk-4byte-phf"
+name = "etk-4byte-pack"
 required-features = [ "generate" ]
