--- a/etk-analyze/Cargo.toml
+++ b/etk-analyze/Cargo.toml
@@ -12,11 +12,11 @@ keywords = ["etk", "ethereum"]
 categories = ["cryptography::cryptocurrencies", "command-line-utilities", "development-tools"]
 
 [features]
-cli = ["etk-cli", "etk-asm", "structopt", "snafu"]
+cli = ["etk-cli", "etk-asm", "clap", "snafu"]
 
 [dependencies]
 snafu = { optional = true, version = "0.7.1" }
-structopt = { optional = true, version = "0.3.26" }
+clap = { optional = true, version = "3.1", features = ["derive"] }
 etk-cli = { optional = true, path = "../etk-cli", version = "0.3.0-dev" }
 etk-asm = { optional = true, path = "../etk-asm", version = "0.3.0-dev" }
 etk-dasm = { path = "../etk-dasm", version = "0.3.0-dev" }
