--- a/etk-asm/Cargo.toml
+++ b/etk-asm/Cargo.toml
@@ -12,7 +12,7 @@ keywords = ["etk", "ethereum", "assembler"]
 categories = ["cryptography::cryptocurrencies", "command-line-utilities", "development-tools", "compilers"]
 
 [features]
-cli = ["structopt", "etk-cli"]
+cli = ["clap", "etk-cli"]
 backtraces = [ "snafu/backtraces" ]
 
 [dependencies]
@@ -23,7 +23,7 @@ pest = "2.1.3"
 pest_derive = "2.1"
 rand = "0.8.5"
 sha3 = "0.10.1"
-structopt = { optional = true, version = "0.3.26" }
+clap = { optional = true, version = "3.1", features = ["derive"] }
 snafu = { version = "0.7.1", default-features = false, features = [ "std" ] }
 
 [dev-dependencies]
