--- a/etk-cli/Cargo.toml
+++ b/etk-cli/Cargo.toml
@@ -12,8 +12,8 @@ keywords = ["etk", "ethereum", "cli"]
 categories = ["cryptography::cryptocurrencies", "command-line-utilities", "development-tools", "command-line-interface"]
 
 [dependencies]
+clap = { version = "3.1", features = ["derive"] }
 hex = "0.4.3"
-structopt = "0.3.26"
 snafu = { version = "0.7.1", default-features = false, features = [ "std" ] }
 
 [dev-dependencies]
