--- a/etk-dasm/Cargo.toml
+++ b/etk-dasm/Cargo.toml
@@ -12,12 +12,12 @@ keywords = ["etk", "ethereum", "disassembler"]
 categories = ["cryptography::cryptocurrencies", "command-line-utilities", "development-tools"]
 
 [features]
-cli = ["structopt", "etk-cli", "snafu", "etk-4byte"]
+cli = ["clap", "etk-cli", "snafu", "etk-4byte"]
 
 [dependencies]
 hex = "0.4.3"
 etk-asm = { path = "../etk-asm", version = "0.3.0-dev" }
-structopt = { optional = true, version = "0.3.26" }
+clap = { optional = true, version = "3.1", features = ["derive"] }
 etk-cli = { optional = true, path = "../etk-cli", version = "0.3.0-dev" }
 etk-4byte = { optional = true, path = "../etk-4byte", version = "0.3.0-dev" }
 snafu = { optional = true, version = "0.7.1" }
