--- a/etk-4byte/Cargo.toml
+++ b/etk-4byte/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "etk-4byte"
-version = "0.3.0"
+version = "0.4.0-dev"
 authors = ["Sam Wilson <sam.wilson@mesh.xyz>"]
 license = "MIT OR Apache-2.0"
 edition = "2018"
