--- a/etk-cli/Cargo.toml
+++ b/etk-cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "etk-cli"
-version = "0.3.0"
+version = "0.4.0-dev"
 authors = ["Sam Wilson <sam.wilson@mesh.xyz>", "lightclient <lightclient@protonmail.com>"]
 license = "MIT OR Apache-2.0"
 edition = "2018"
