--- a/etk-dasm/Cargo.toml
+++ b/etk-dasm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "etk-dasm"
-version = "0.3.0"
+version = "0.4.0-dev"
 authors = ["Sam Wilson <sam.wilson@mesh.xyz>", "lightclient <lightclient@protonmail.com>"]
 license = "MIT OR Apache-2.0"
 edition = "2018"
@@ -16,11 +16,11 @@ cli = ["clap", "etk-cli", "snafu", "etk-4byte"]
 
 [dependencies]
 hex = "0.4.3"
-etk-ops = { path = "../etk-ops", version = "0.3.0" }
-etk-asm = { path = "../etk-asm", version = "0.3.0" }
+etk-ops = { path = "../etk-ops", version = "0.4.0-dev" }
+etk-asm = { path = "../etk-asm", version = "0.4.0-dev" }
 clap = { optional = true, version = "3.1", features = ["derive"] }
-etk-cli = { optional = true, path = "../etk-cli", version = "0.3.0" }
-etk-4byte = { optional = true, path = "../etk-4byte", version = "0.3.0" }
+etk-cli = { optional = true, path = "../etk-cli", version = "0.4.0-dev" }
+etk-4byte = { optional = true, path = "../etk-4byte", version = "0.4.0-dev" }
 snafu = { optional = true, version = "0.7.1" }
 
 [dev-dependencies]
