--- a/etk-asm/Cargo.toml
+++ b/etk-asm/Cargo.toml
@@ -35,6 +35,7 @@ rand = "0.8.5"
 sha3 = "0.10.1"
 clap = { optional = true, version = "3.1", features = ["derive"] }
 snafu = { version = "0.7.1", default-features = false, features = ["std"] }
+indexmap = "2.1.0"
 
 [dev-dependencies]
 assert_matches = "1.5.0"
